--- a/script/Rmd/instruction.Rmd
+++ b/script/Rmd/instruction.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
   word_document: default
 ---
 
@@ -15,7 +15,7 @@ fontsize: 12pt
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = F, fig.pos = 'h', fig.align = 'center', fig.lp = 'AAA')
+knitr::opts_chunk$set(echo = F, fig.pos = 'h', fig.align = 'center')
 # Install and load packages
 if (!require("rmarkdown")) {install.packages("rmarkdown"); require("rmarkdown")}
 ```
@@ -27,7 +27,7 @@ if (!require("rmarkdown")) {install.packages("rmarkdown"); require("rmarkdown")}
 ## BEFORE PARTICIPANT ARRIVES:
 - Devices
 1. Connect the audio interface (Focusrite Scarlett 6i6) to Macbook Pro.
-2. Connect a headphone to the audio interface.
+2. Connect twp headphones to the audio interface.
 3. Connect the piano to the audio interface.
 4. Turn on the piano, the audio interface and the screen in front of the piano.
 5. Open “Focusrite Control” app ![](focusriteControl.jpg){ width=5% } and click “Load from device”.
@@ -46,7 +46,7 @@ knitr::include_graphics("03.png")
 ``` 
 
 If you don’t see the images above, go to File >> Preset >> select “Analogue + Digital”.
-Adjust the volume of the headphone so that it sounds naturally (Later, also ask a participant).
+Adjust the volume of the headphone so that it sounds naturally.
 
 \pagebreak
 
@@ -76,11 +76,12 @@ knitr::include_graphics("mainPatch_screen.png")
 
 ## WHEN PARTICIPANT ARRIVES:
 
-- *Italic*: Instruction
+- *Italic*: Verbal instruction
+- **[  ]**: What to do
 
 ### Introduction
 
-*Thank you for participating in the experiment. The aim of the experiment is to investigate how people play a piece of music with musical expressions. The experiment is going to last about one hour.*
+*Thank you for participating in the experiment. The aim of the experiment is to investigate how people play a piece of music expressively. The experiment is going to last about one hour.*
 
 *If you have any questions or concerns, please ask the experimenter at any time about the nature of the study or the methods we are using. Also, you have the right to withdraw from the experiment at any time.*
 
@@ -104,6 +105,8 @@ knitr::include_graphics("stim_n.png")
 
 **[ Click “Metro” ]**
 
+*Please practise until you feel that you confortably perform the piece without pitch errors. After practice, we will have a brief test to make sure you can perform the piece. Also, you don't have to memorise the piece as you can see sheet music in front of you. Let me know when you are ready for the brief test.*
+
 **[ Let the participant practise the piece ]**
 
 **[ Click "inst_g2" ]**
@@ -126,9 +129,10 @@ knitr::include_graphics("inst_g2.png")
 #### 1) Teaching condition
 ##### 1st Stimulus
 
-*You are going to perform the piece with the first musical expressions. I will show sheet music with expressive notations on the screen in front of you. Please read the notations and practise the piece.*
+*You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation and perform the piece 5 times according to the notation.*
 
 **[ Click 1st Stimulus ]**
+**[ Explain the musical notation]**
 
 ```{r stim_a, out.width = '80%', fig.cap = 'Articulation'}
 knitr::include_graphics("stim_a.png")
@@ -136,7 +140,7 @@ knitr::include_graphics("stim_a.png")
 
 **[ Ask the participant to play the piece with the expressions 5 times ]**
 
-Thank you. Do you have any questions?
+*Thank you. Do you have any questions?*
 
 **[ Click “inst_t” ]**
 
@@ -148,15 +152,16 @@ knitr::include_graphics("inst_t.png")
 
 ##### 2nd Stimulus
 
-*Thank you. Now, we are moving on to the second musical expressions. Again, I will show sheet music with expressive notations on the screen in front of you. Please read the notations and practice the piece.*
+*Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation and perform the piece 5 times according to the notation.*
 
 **[ Click 2nd Stimuli ]**
+**[ Explain the musical notation]**
 
 ```{r stim_d, out.width = '80%', fig.cap = 'Dynamics'}
 knitr::include_graphics("stim_d.png")
 ``` 
 
-**[ Ask the participant to play the piece with the expressions 5 times ]**
+**[ Ask the participant to play the piece with the expression 5 times ]**
 
 *Thank you. Do you have any questions?*
 
@@ -166,15 +171,16 @@ knitr::include_graphics("stim_d.png")
 
 #####  3rd Stimulus
 
-*Thank you. Now, we are moving on to the third musical expressions. Again, I will show sheet music with expressive notations on the screen in front of you. Please read the notations and practice the piece.*
+*Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation and perform the piece 5 times according to the notation.*
 
 **[ Click 3rd Stimulus ]**
+**[ Explain the musical notation]**
 
 ```{r stim_t, out.width = '80%', fig.cap = 'Tempo Change'}
 knitr::include_graphics("stim_t.png")
 ``` 
 
-**[ Ask the participant to play the piece with the expressions 5 times ]**
+**[ Ask the participant to play the piece with the expression 5 times ]**
 
 *Thank you. Do you have any questions?*
 
@@ -187,11 +193,12 @@ knitr::include_graphics("stim_t.png")
 #### 2) Performing condition
 ##### 1st Stimulus
 
-*You are going to perform the piece with the first musical expressions. I will show sheet music with expressive notations on the screen in front of you. Please read the notations and practise the piece twice.*
+*You are now going to perform the piece in an expressive style indicated by the musical notation. I will show sheet music with the musical notation on the screen in front of you. Please read the notation and perform the piece 5 times according to the notation.*
 
 **[ Click 1st Stimulus ]**
+**[ Explain the musical notation]**
 
-**[ Ask the participant to play the piece with the expressions 5 times ]**
+**[ Ask the participant to play the piece with the expression 5 times ]**
 
 *Thank you. Do you have any questions?*
 
@@ -205,11 +212,14 @@ knitr::include_graphics("inst_p.png")
 
 ##### 2nd Stimulus
 
-*Thank you. Now, we are moving on to the second musical expressions. Again, I will show sheet music with expressive notations on the screen in front of you. Please read the notations and practice the piece.*
+*Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation and perform the piece 5 times according to the notation.*
 
 **[ Click 2nd Stimulus ]**
 
-**[ Ask the participant to play the piece with the expressions 5 times ]**
+
+**[ Explain the musical notation]**
+
+**[ Ask the participant to play the piece with the expression 5 times ]**
 
 *Thank you. Do you have any questions?*
 
@@ -219,11 +229,12 @@ knitr::include_graphics("inst_p.png")
 
 ##### 3rd Stimulus
 
-*Thank you. Now, we are moving on to the third musical expressions. Again, I will show sheet music with expressive notations on the screen in front of you. Please read the notations and practice the piece.*
+*Thank you. Now, we are moving on to the different musical notation. Again, I will show sheet music with the musical notation on the screen in front of you. Please read the notation and perform the piece 5 times according to the notation.*
 
 **[ Click 3rd Stimulus ]**
+**[ Explain the musical notation]**
 
-**[ Ask the participant to play the piece with the expressions 5 times ]**
+**[ Ask the participant to play the piece with the expression 5 times ]**
 
 *Thank you. Do you have any questions?*
 
@@ -233,7 +244,7 @@ knitr::include_graphics("inst_p.png")
 
 ### Questionnaire
 
-*Thank you. This is the end of the experiment. Lastly, could you please fill in the short questionnaire?*
+*Thank you. This is the end of the experiment. Lastly, could you please fill in the questionnaire?*
 
 **[ Collect the short questionnaire ]**
 
