Update jupyter notebook

--- a/script/python/image_generator.ipynb
+++ b/script/python/image_generator.ipynb
@@ -1,40 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Instruction and Stimuli generator"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary packages\n",
     "import os\n",
-    "from PIL import Image, ImageDraw, ImageFont"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Instruction generator\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
     "\n",
-    "blahblahblah"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Create a black screen\n",
     "bg = Image.new(\"RGB\",(2560, 1440),\"black\") # Black 2560 px x 1440 px\n",
-    "bg.save(\"./stimuli/black.png\", quality = 100)"
+    "savename = \"./stimuli/black.png\"\n",
+    "bg.save(savename, quality = 100)"
    ]
   },
   {
@@ -56,27 +35,22 @@
     "3 skills * 2 conditions * 8 trials = 48 stimuli\n",
     "\n",
     "### Examples\n",
+    "Example 1: The **first** trial of the **teaching-articulation** condition.\n",
+    "<p><img src=\"./stimuli/1_t_stim_a.png\" width = 50% align = left>\n",
+    "<br clear=\"all\"></p>\n",
     "\n",
-    "<p>\n",
-    "<img src=\"./stimuli/1_t_stim_a.png\" width = 50% align = left>\n",
-    "<br clear=\"all\">\n",
-    "Example 1: The first trial of the teaching-articulation condition.\n",
-    "</p>\n",
-    "\n",
-    "<p>\n",
-    "<img src=\"./stimuli/3_p_stim_d.png\" width = 50% align = left>\n",
-    "<br clear=\"all\">\n",
-    "Example 2: The third trial of the performing-dynamics condition.\n",
-    "</p>"
+    "Example 2: The **third** trial of the **performing-dynamics** condition.\n",
+    "<p><img src=\"./stimuli/3_p_stim_d.png\" width = 50% align = left>\n",
+    "<br clear=\"all\"></p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls_file = os.listdir(\"./image/\") # Read athe list of image files\n",
+    "ls_file = os.listdir(\"./image/\") # Read the list of image files\n",
     "\n",
     "# Create a stimuli folder if not exist (save created stimuli into the folder)\n",
     "if not os.path.exists(\"stimuli\"):\n",
