--- a/script/jupyter/image_generator.ipynb
+++ b/script/jupyter/image_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stimuli generator\n",
+    "# Stimuli generator\n",
     "\n",
-    "### Create a stimuli image for each trial.\n",
+    "## Requirement\n",
+    "The location of a font file (i.e., fontpath) should be replaced according to your system.<br>\n",
+    "Default: fontpath = \"System/Library/Fonts/HelveticaNeue.ttc\"\n",
+    "\n",
+    "## Create stimuli for each trial\n",
     "In each trial, participants see one picture, which shows sheet music with expressive notation (the current skill; e.g., articulation) and the current condition (e.g., teaching) and the current trial number.\n",
     "\n",
     "Participants perform the music with one expression (e.g., articulation) 8 times in each condition (e.g., the teaching condition).\n",
@@ -46,24 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls_file = os.listdir(\"./image/\") # Read the list of image files\n",
+    "ls_file = os.listdir(\"./image/trial/\") # Read the list of image files\n",
     "\n",
     "# Create a stimuli folder if not exist (save created stimuli into the folder)\n",
     "if not os.path.exists(\"stimuli\"):\n",
     "    os.makedirs(\"stimuli\")\n",
     "    \n",
     "for image in ls_file:\n",
-    "    fontpath = \"System/Library/Fonts/HelveticaNeue.ttc\" # Set the location of a font file\n",
+    "    fontpath = \"System/Library/Fonts/HelveticaNeue.ttc\" # !!!Set the location of a font file!!!\n",
     "    font = ImageFont.truetype(fontpath, 120) # Fonttype and fontsize\n",
     "    bg = Image.new(\"RGB\",(2560, 1440),\"black\") # Background - Black 2560 px x 1440 px\n",
-    "    imgname = \"./image/\" + image\n",
+    "    wh = Image.new(\"RGB\",(2250, 600), \"white\") # White square 2250 px x 600px\n",
+    "    imgname = \"./image/trial/\" + image\n",
     "    img = Image.open(imgname) # Open a stimulus image\n",
     "    # Make copies of each image and combine them for each condition\n",
     "    stim = bg.copy()\n",
+    "    stim.paste(wh.copy(), (154, 440))\n",
     "    img_copy = img.copy()\n",
     "    stim.paste(img_copy, (154, 520))\n",
     "    for cond in [\"teaching\", \"performing\"]: # Each condition\n",
@@ -74,15 +80,67 @@
     "            if cond == \"teaching\":\n",
     "                draw_current.text((590, 250),\"Do your best as a teacher\", \n",
     "                                  fill = \"yellow\", font = font) # teacher\n",
-    "                draw_current.text((1050, 1050), trial, fill = \"yellow\", font = font) # trial\n",
+    "                draw_current.text((1050, 1100), trial, fill = \"yellow\", font = font) # trial\n",
     "                savename = \"./stimuli/\" + str(i+1) + \"_\" + 't' + \"_\" + image\n",
     "                stim_current.save(savename, quality = 100)\n",
     "            elif cond == \"performing\":\n",
     "                draw_current.text((540, 250),\"Do your best as a performer\", \n",
     "                                  fill = \"yellow\", font = font) # performer\n",
-    "                draw_current.text((1050, 1050), trial, fill = \"yellow\", font = font) # trial\n",
+    "                draw_current.text((1050, 1100), trial, fill = \"yellow\", font = font) # trial\n",
     "                savename = \"./stimuli/\" + str(i+1) + \"_\" + 'p' + \"_\" + image\n",
     "                stim_current.save(savename, quality = 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create stimuli for practice\n",
+    "\n",
+    "In a practice trial, participants see the following three different pictures.\n",
+    "1. Excerpt without muscial expression\n",
+    "<p><img src=\"./practice/prac_stim_n.png\" width = 50% align = left>\n",
+    "<br clear=\"all\"></p><br>\n",
+    "2. Excerpt with articulation\n",
+    "<p><img src=\"./practice/prac_stim_a.png\" width = 50% align = left>\n",
+    "<br clear=\"all\"></p><br>\n",
+    "3. Excerpt with dynamics\n",
+    "<p><img src=\"./practice/prac_stim_d.png\"\" width = 50% align = left>\n",
+    "<br clear=\"all\"></p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ls_file = os.listdir(\"./image/practice/\") # Read the list of image files\n",
+    "\n",
+    "# Create a practice folder if not exist (save created pictures into the folder)\n",
+    "if not os.path.exists(\"practice\"):\n",
+    "    os.makedirs(\"practice\")\n",
+    "    \n",
+    "for image in ls_file:\n",
+    "    fontpath = \"System/Library/Fonts/HelveticaNeue.ttc\" # !!!Set the location of a font file!!!\n",
+    "    font = ImageFont.truetype(fontpath, 120) # Fonttype and fontsize\n",
+    "    bg = Image.new(\"RGB\",(2560, 1440),\"black\") # Background - Black 2560 px x 1440 px\n",
+    "    wh = Image.new(\"RGB\",(2250, 600), \"white\") # White square 2250 px x 600px\n",
+    "    imgname = \"./image/practice/\" + image\n",
+    "    img = Image.open(imgname) # Open a stimulus image\n",
+    "    # Make copies of each image and combine them for each condition\n",
+    "    stim = bg.copy()\n",
+    "    stim.paste(wh.copy(), (154, 440))\n",
+    "    img_copy = img.copy()\n",
+    "    stim.paste(img_copy, (154, 520))\n",
+    "    if image == \"stim_n.png\":\n",
+    "        draw_current = ImageDraw.Draw(stim)\n",
+    "        draw_current.text((300, 250),\"Please practice the piece as notated.\", fill = \"yellow\", font = font)\n",
+    "        savename = \"./practice/\" + \"prac_\" + image\n",
+    "        stim.save(savename, quality = 100)\n",
+    "    else:\n",
+    "        savename = \"./practice/\" + \"prac_\" + image\n",
+    "        stim.save(savename, quality = 100)"
    ]
   },
   {
